# tf-server

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CAMARA_COMPLIANCE.md  Dockerfile  README.md  api_requirements.txt  api_server.py  camara_device_status.py  camara_endpoints.py  camara_history.py  camara_location.py  camara_models.py  camara_number_verification.py  camara_qod.py  camara_sim_swap.py  camara_traffic_influence.py  mongodb_client.py  mongodb_logger.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: cd-ghcr.yml  ci.yml
camara_models/: __init__.py  common.py  device_status.py  location.py  number_verification.py  qod.py  sim_swap.py  traffic_influence.py
docs/: CAMARA_DEVICE_STATUS_API.md  CAMARA_SIM_SWAP_API.md  CONTRIBUTING.md  CORESIM_ADAPTER.md  LOCATION_API_DOCUMENTATION.md  LOCATION_API_OVERVIEW.md  QOD_API_DOCUMENTATION.md  QOD_API_OVERVIEW.md  TESTING.md
examples/: camara_location_example.py  camara_qod_example.py  camara_traffic_influence_example.py  complete_workflow_example.py  coresim_oam_example.py  example.py
mongodb/: init-mongo.js
src/sunrise6g_opensdk/: __init__.py  logger.py
src/sunrise6g_opensdk/common/: adapters_factory.py  sdk.py
tests/common/: test_invoke_edgecloud_clients.py  test_invoke_network_clients.py  test_invoke_oran_clients.py
tests/edgecloud/: test_cases.py  test_config_camara.py  test_config_gsma.py  test_e2e_camara.py  test_e2e_gsma.py
tests/network/: test_cases.py  test_create_monitoring_event.py  test_create_qod_session.py  test_create_traffic_influence.py
tests/oran/: test_cases.py  test_qod_session.py  test_qod_session_notification.py  test_qod_session_with_duration.py  test_qod_session_with_duration_notification.py
(+90 files in other folders)
